[workspace]
resolver = "2"
members = [
    "crates/dtp-core",
    "crates/dtp-sdk",
    "crates/dtp-dev-app",
    "crates/dtp-test-helper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://dtp.dev"
license = "Apache-2.0"
documentation = "https://docs.dtp.dev"

[workspace.dependencies]
# By default, DTP is built using the remote git Sui (devnet branch).
#
# Optionally, un-comment the "path"" sui-sdk dependency to make sure
# your running localnet and application use the same local Sui repo.
#
# Use "script/init-localnet" to create or update this local repo.
#
# See https://github.com/mario4tier/dtp/tree/main/script for doc
# about DTP directories structure.

#sui-sdk = { path = "../dtp-dev/sui-devnet/crates/sui-sdk/" }
#sui-json-rpc-types = { path = "../dtp-dev/sui-devnet/crates/sui-json-rpc-types/" }
#sui-keys = { path = "../dtp-dev/sui-devnet/crates/sui-keys/" }
#sui-types = { path = "../dtp-dev/sui-devnet/crates/sui-types/" }

# Comment these sui-XXXXX "git" dependencies if using the above "path" dependencies.
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", branch = "devnet", package = "sui-json-rpc-types" }
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "devnet", package = "sui-keys" }
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "devnet", package = "sui-types" }

tokio = { version = "1.22.0", features = ["full"] }
anyhow = "1.0.64"

[workspace.dependencies.serial_test]
# Intended to be used as [dev-dependencies] only.
#
# Attribute macros to control how test can run sequentially/parallel.
#    https://tevps.net/blog/serial_test/ 
#
# Imagine a RWLock, the attributes do the following:
#   [serial]     : Equivalent to a writer lock on the "RWLock".
#   [parallel]   : Equivalent to a reader lock on the "RWLock".
#   No Attribute : Can run at anytime, ignores the RWLock.
version = "=0.9.0" # Force the version to keep things safe.

[workspace.dependencies.cargo-husky]
# Intended to be used as [dev-dependencies] only.
#
# Git hooks of common Rust operations.
#    https://github.com/rhysd/cargo-husky#readme
version = "=1.5.0" # Force the version to keep things safe.
default-features = false # Disable features which are enabled by default
features = [
    "precommit-hook",
    "run-for-all",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
