[workspace]
resolver = "2"
members = [
    "crates/dtp-core",
    "crates/dtp-sdk",
    "crates/dtp-server",
    "crates/dtp-test-helper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://dtp.dev"
license = "Apache-2.0"
documentation = "https://docs.dtp.dev"
default-run = "dtp-server"

[workspace.dependencies]
# DTP uses Suibase for both development and production.
#
# This allows to keep multiple SDKs, dependencies and binaries in-sync.
#
# After installing Suibase, type "dtp start" to enable and start the DTP services daemon.
#
# The DTP SDK is built using the Suibase active workdir.
#
# As an example, if you did "mainnet set-active", the SDK will be built to be version compatible with mainnet
# (most of the time, this version will also work with devnet/testnet).
#
# If you want to build to maximize testnet compatibility, you can do "testnet set-active" first and rebuild your Rust app.
sui-sdk = { path = "../dtp-dev/sui-devnet-branch/crates/sui-sdk/" }
sui-json-rpc-types = { path = "../dtp-dev/sui-devnet-branch/crates/sui-json-rpc-types/" }
sui-keys = { path = "../dtp-dev/sui-devnet-branch/crates/sui-keys/" }
sui-types = { path = "../dtp-dev/sui-devnet-branch/crates/sui-types/" }
sui-adapter = { path = "../dtp-dev/sui-devnet-branch/crates/sui-adapter/" }

# Comment these sui-XXXXX "git" dependencies if using the above "path" dependencies.
#sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
#sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", branch = "devnet", package = "sui-json-rpc-types" }
#sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "devnet", package = "sui-keys" }
#sui-types = { git = "https://github.com/MystenLabs/sui", branch = "devnet", package = "sui-types" }
#sui-adapter = { git = "https://github.com/MystenLabs/sui", branch = "devnet", package = "sui-adapter" }

tokio = { version = "1.24.1", features = ["full"] }
telemetry-subscribers = { version = "0.2.0" }

anyhow = { version = "1.0.68", features = ["backtrace"] }
thiserror = "1.0.34"

serde = { version = "1.0.144", features = ["derive"] }

clap = { version = "3.2.22", features = [
    "derive",
] } # No upgrade to v4 until color are back.
colored = { version = "2.0.0" }

[workspace.dependencies.serial_test]
# Intended to be used as [dev-dependencies] only.
#
# Attribute macros to control how test can run sequentially/parallel.
#    https://tevps.net/blog/serial_test/ 
#
# Imagine a RWLock, the attributes do the following:
#   [serial]     : Equivalent to a writer lock on the "RWLock".
#   [parallel]   : Equivalent to a reader lock on the "RWLock".
#   No Attribute : Can run at anytime, ignores the RWLock.
version = "=0.9.0" # Force the version to keep things safe.

[workspace.dependencies.cargo-husky]
# Intended to be used as [dev-dependencies] only.
#
# Git hooks of common Rust operations.
#    https://github.com/rhysd/cargo-husky#readme
version = "=1.5.0" # Force the version to keep things safe.
default-features = false # Disable features which are enabled by default
features = [
    "precommit-hook",
    "run-for-all",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
