# Cargo.toml documentation: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "dtp-core"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
documentation.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
sui-sdk.workspace = true
sui-adapter.workspace = true
sui-json-rpc-types.workspace = true
sui-keys.workspace = true
sui-types.workspace = true
thiserror.workspace = true
derivative = "2.2.0"

[dev-dependencies]
serial_test.workspace = true
cargo-husky.workspace = true
