[package]
name = "dtp-dev-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Directory structure:
#
#     <Your Directory> _____ dtp ______ dtp-sdk
#                       \
#                        \__ dtp-dev __ sui
#
# dtp-dev can be manually created by you and you clone sui devnet branch into it.
#     OR
# Just run once the script dtp/script/init-localnet that does it all.
#
sui_sdk = { path = "../../../dtp-dev/sui/crates/sui-sdk/", package="sui-sdk" }
tokio = { version = "1.22.0", features = ["full"] }
anyhow = "1.0.64"