[package]
name = "dtp-dev-app"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
documentation.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
sui-sdk.workspace = true

dtp-sdk = { path = "../dtp-sdk/" }

[dev-dependencies]
cargo-husky.workspace = true