# Cargo.toml documentation: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "dtp-sdk"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
documentation.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
sui-sdk.workspace = true
dtp-core = { path = "../dtp-core/" }

[dev-dependencies]
dtp-test-helper = { path = "../dtp-test-helper/" }
serial_test.workspace = true
cargo-husky.workspace = true
