[package]
name = "dtp-server"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
documentation.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
sui-sdk.workspace = true
clap.workspace = true
colored.workspace = true
futures = "0.3.23"
telemetry-subscribers.workspace = true

# tracing.workspace = true

# tracing-subscriber = { version = "0.3.16" }

dtp-sdk = { path = "../dtp-sdk/" }

[dev-dependencies]
cargo-husky.workspace = true
